<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        tools:context=".SettingsFragment"
        android:orientation="vertical">

<TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/alertLevel"
        android:textSize="21sp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
/>

<CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Good"
        android:textSize="18sp"
        android:id="@+id/goodSwitch"

/>

<CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/moderate"
        android:textSize="18sp"
        android:id="@+id/moderateSwitch"
/>

<CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Bad"
        android:textSize="18sp"
        android:id="@+id/badSwitch"

/>

<CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/vBad"
        android:textSize="18sp"
        android:id="@+id/vBadSwitch"
/>

<TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/checkBoxInfo"
        android:text="INFOOMPERSONVERNOGBRUKSOMRÅDEOSV..."
        android:textSize="18sp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
/>

    <CheckBox
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/astma"
            android:text="@string/astma"
            android:textSize="18sp"

    />

    <CheckBox
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/ingen"
            android:text="@string/ingen"
            android:textSize="18sp"
    />

<CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/hjerte"
        android:text="@string/hjerte"
        android:textSize="18sp"

/>

<CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/eldre"
        android:text="@string/eldre"
        android:textSize="18sp"
/>

<CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/gravide"
        android:text="@string/gravide"
        android:textSize="18sp"

/>

<Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:id="@+id/savebutton"
        android:text="LAGRE"
        android:layout_marginLeft="70dp"
        android:layout_marginRight="70dp"
        android:textSize="24sp"
        android:layout_gravity="center"
        />



</LinearLayout>

