<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.AlertDialogLayout

        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:id="@+id/alert_dialog"
        android:orientation="vertical"
        android:background="@color/white"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:textAlignment="center"
>

    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dialog_title"
            android:fontFamily="sans-serif"
            android:layout_marginTop="5dp"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textColor="@color/black"
    />

    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/edit_title"
            android:layout_margin="5dp"
            android:paddingStart="30dp"
            android:textColor="@color/colorAccent"
            android:hint="@string/title"

    />
    <android.support.v7.widget.LinearLayoutCompat android:layout_width="match_parent"
                                                  android:layout_height="wrap_content"
                                                  android:textAlignment="center"
                                                  android:weightSum="2"
                                                  android:orientation="horizontal">

        <Button
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:id="@+id/cancel_button"
                android:layout_margin="5dp"
                android:text="@string/avbryt"
                android:textColor="@color/black"
                android:background="@drawable/ripple_effect"
                android:layout_weight="1"
        />
        <Button
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:id="@+id/add_button"
                android:text="@string/legg_til"
                android:textColor="@color/black"
                android:background="@drawable/ripple_effect"
                android:layout_weight="1"
        />
    </android.support.v7.widget.LinearLayoutCompat>

</android.support.v7.widget.AlertDialogLayout>

        <!--android:background="@color/colorAccent"-->
