<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.AlertDialogLayout

        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/delete_alert"
        android:orientation="vertical"
        android:background="@color/white"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:textAlignment="center"
>

    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/delete_dialog_title"
            android:layout_marginTop="5dp"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textColor="@color/black"
    />
    <android.support.v7.widget.LinearLayoutCompat android:layout_width="match_parent"
                                                  android:layout_height="wrap_content"
                                                  android:textAlignment="center"
    android:orientation="horizontal">


    <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/cancel_button"
            android:layout_margin="5dp"
            android:text="@string/avbryt"
            android:textColor="@color/black"
            android:background="@drawable/ripple_effect"
    />
    <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/ok_button"
            android:layout_margin="5dp"
            android:text="@string/ok"
            android:textColor="@color/black"
            android:background="@drawable/ripple_effect"
    />
    </android.support.v7.widget.LinearLayoutCompat>

</android.support.v7.widget.AlertDialogLayout>

        <!--android:background="@color/colorAccent"-->