<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.AlertDialogLayout

        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:id="@+id/alert_dialog"
        android:orientation="vertical"
        android:background="@color/white"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:textAlignment="center"
>

    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dialog_title"
            android:fontFamily="sans-serif"
            android:layout_marginTop="5dp"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textColor="@color/black"
    />
    <RelativeLayout android:layout_width="match_parent" android:layout_height="50dp"
                    android:background="@drawable/white_border"
                    android:id="@+id/search_input"
    >
        <ImageView android:layout_width="15dp" android:layout_height="15dp"
                   android:layout_centerVertical="true"
                   android:layout_marginLeft="10dp"
                   android:id="@+id/glass_magnify"
                   android:src="@drawable/ic_glass_magnify"


        />
        <TextView android:layout_width="match_parent" android:layout_height="wrap_content"
                  android:layout_marginLeft="10dp"
                  android:layout_centerVertical="true"
                  android:textSize="15sp"
                  android:layout_toRightOf="@+id/glass_magnify"
                  android:background="@null"
                  android:textColor="#000"
                  android:hint="Oppgi addresser, byer, postnummer"
        />


    </RelativeLayout>


    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/edit_title"
            android:layout_margin="5dp"
            android:paddingStart="30dp"
            android:textColor="@color/colorAccent"
            android:hint="@string/title"

    />
    <TextView
            android:layout_width="match_parent"
            android:layout_margin="5dp"
            android:paddingStart="30dp"
            android:id="@+id/edit_description"
            android:layout_height="wrap_content"
            android:hint="@string/description"
            android:textColor="@color/colorAccent"


    />



    <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/add_button"
            android:layout_margin="5dp"
            android:text="ADD"
            android:textColor="@color/black"
            android:background="@drawable/ripple_effect"

            android:enabled="false"
    />


</android.support.v7.widget.AlertDialogLayout>

        <!--android:background="@color/colorAccent"-->
