<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_margin="10dp"
        android:id="@+id/card_view"
        card_view:contentPadding="5dp"
        card_view:cardBackgroundColor="#ffffff"
>
    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/relative_view"
            android:orientation="vertical"
            android:animateLayoutChanges="true"
    >
        <TextView android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:id="@+id/title_text"
                  android:layout_marginStart="10dp"
                  android:layout_marginTop="10dp"
                  android:layout_marginEnd="50dp"
                  android:text="@string/country"
                  android:textColor="@color/black"
                  android:textSize="25sp"
                  android:textStyle="bold"
        />
        <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:id="@+id/risk_layout"
                android:layout_below="@id/title_text"
                android:layout_alignLeft="@+id/title_text"

        >

            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                      android:id="@+id/type"
                      android:text="@string/niva"
                      android:textSize="18sp"
            />
            <TextView android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:layout_marginStart="10dp"
                      android:id="@+id/description_text"
                      android:text="@string/risk_type"

                      android:textColor="@color/white"
                      android:textSize="18sp"
                      android:layout_toRightOf="@+id/type"
            />


        </RelativeLayout>

        <RelativeLayout android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:id="@+id/infoview"
                        android:layout_below="@id/risk_layout"
                        android:layout_marginBottom="15dp"
        >
            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                      android:id="@+id/pollution"
                      android:gravity="center"
                      android:textSize="20sp"
                      android:layout_centerHorizontal="true"
                      android:visibility="visible"
            />
            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                      android:id="@+id/pollution2"
                      android:textSize="20sp"
                      android:layout_below="@id/pollution"
                      android:layout_centerHorizontal="true"
                      android:visibility="visible"
            />
            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                      android:id="@+id/pollution3"
                      android:textSize="20sp"
                      android:layout_below="@+id/pollution2"
                      android:layout_centerHorizontal="true"
                      android:visibility="visible"
            />
            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                      android:id="@+id/pollution4"
                      android:textSize="20sp"
                      android:layout_below="@id/pollution6"
                      android:visibility="visible"
            />
            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                      android:id="@+id/pollution5"
                      android:textSize="20sp"
                      android:layout_below="@id/pollution6"
                      android:layout_alignParentEnd="true"
                      android:visibility="visible"
            />

            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                      android:id="@+id/pollution6"
                      android:textSize="20sp"
                      android:layout_below="@id/pollution3"
                      android:layout_centerHorizontal="true"
            />


        </RelativeLayout>

    </RelativeLayout>

    <ImageView android:layout_width="wrap_content" android:layout_height="wrap_content"
               android:id="@+id/risk_display"
               android:layout_gravity="end"
               android:layout_marginEnd="50dp"
               android:layout_marginTop="25dp"
    />
    <ImageButton android:layout_width="wrap_content" android:layout_height="wrap_content"
                 android:id="@+id/add_button"
                 android:src="@drawable/ic_add_round_button_svgrepo_com"
                 android:layout_gravity="end"
                 android:layout_marginTop="25dp"
                 android:layout_marginEnd="25dp"
                 android:background="@color/white"
    />


</android.support.v7.widget.CardView>
